very ugly and quick fix for the pagination overflow

--- a/home.less
+++ b/home.less
@@ -266,6 +266,7 @@ header {
 		margin-right: .5em;
 		display: flex;
 		align-items: center;
+		flex-wrap: wrap;
 		overflow: hidden;
 
 		li{
